--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/drawing.png" alt="" /></span>
-								<p>I maintain excellence in my work by maintaining a customer centric approach to projects. I am known for being a team player and stepping in to help my coworkers and company where I am needed most. I am passionate about coding as it gives me opportunities to create new tools that improve society.</p>
+								<p>My goal is helping all kinds of people to achieve peak connectivity and productivity by designing visually appealing web applications. These applications must be intuitive and efficient for the user.
+									Truthfulness and credibility are my motto in life. When I commit to a specific task, with my family or at work, I do my best to fulfill that commitment by 100%. I am reliable and disciplined, I find tremendous joy in helping people and organizations achieve their goals.</p>
 								<ul class="icons">
 
 									<li><a href="https://www.linkedin.com/in/william-mendez-165673201/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
