--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/drawing.png" alt="" /></span>
+								<span class="image main"><img src="images/profilePic.jpg" alt="" /></span>
 								<p>My goal is helping all kinds of people to achieve peak connectivity and productivity by designing visually appealing web applications. These applications must be intuitive and efficient for the user.
 									Truthfulness and credibility are my motto in life. When I commit to a specific task, with my family or at work, I do my best to fulfill that commitment by 100%. I am reliable and disciplined, I find tremendous joy in helping people and organizations achieve their goals.</p>
 								<ul class="icons">
