--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<p>This project contains the most updated Covid data information worldwide (Feb 2020 -  Feb 2022), using SQL I proccessed all data to be more readable and understandable so it could be used in Tableau to generate a very dynamic and easy to read matrix for the final user.<br><a href="https://github.com/willmen37/DataPotfolioProject/blob/main/Covid%20Data%20Analysis.sql"><strong>View Project</strong> </a></p>
 
 								<h2 class="major">Tableau Worldwide Covid Data</h2>
-								<span class="image main"><img src="images/pic001.jpg" alt="" /></span>
+								<span class="image main"><img src="images/tableau.png" alt="" /></span>
 								<p>In this project I put together all the information from the above SQL project, this matrix shows you the increase on Covid deaths by country and also worldwide, the matrix also shows you a projection if the current numbers keep on increasing <br><a href="https://public.tableau.com/app/profile/william7217/viz/PortfolioFinal_16454638196890/Dashboard1"><strong>View Project</strong></a></p>
 
 								<h2 class="major">Python Correlation Data</h2>
